# OSLABS

./: .gitignore
lab1/: CMakeLists.txt  a.out  main.cpp
lab1/errlib/: error_handlers.cpp  error_handlers.h  errors.h
lab1/iolib/: io.cpp  io.h  std.cpp  std.h
lab1/multitasking/: child.cpp  child.h  parent.cpp  parent.h
lab2/src/: CMakeLists.txt  Dockerfile  a.out  main.cpp
lab2/src/a.out.dSYM/Contents/Resources/DWARF/: a.out
lab2/src/a.out.dSYM/Contents/Resources/Relocations/aarch64/: a.out.yml
lab2/src/iolib/: std.cpp  std.h
lab3/: 1.txt  Dockerfile  a.out  main.cpp
lab3/errlib/: error_handlers.h  errors.h
lab3/multitasking/: child.cpp  child.h  parent.cpp  parent.h
lab4/src/: Dockerfile  a.out  main  main.c
lab4/src/mc_cusic_karels_allocator/: allocator.c
lab4/src/two_degree_allocator/: allocator.c  allocator.h
